--- a/angular.json
+++ b/angular.json
@@ -14,6 +14,7 @@
         "sourceLocale": "en",
         "locales": {
           "fr": "src/assets/i18n/fr.json",
+          "en": "src/assets/i18n/en.json",
           "es": "src/assets/i18n/es.json"
         }
       },
